--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -413,6 +413,7 @@
     }
    ],
    "source": [
+    "# look at dataset\n",
     "df.head()"
    ]
   },
@@ -589,6 +590,7 @@
     }
    ],
    "source": [
+    "# looking at dataset\n",
     "df.head()"
    ]
   },
@@ -1617,30 +1619,6 @@
    "source": [
     "# looking at correlations\n",
     "px.imshow(df.corr(), text_auto=True, aspect='auto', template='ggplot2', title='Correlations')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Index(['name', 'us_sales_millions', 'average_unit_sales_thousands',\n",
-       "       'franchised_stores', 'company_stores', '2021_total_units',\n",
-       "       'change_in_units_from_2020', 'share_of_sales', 'company_store_ratio',\n",
-       "       'franchise_store_ratio', 'units_percent_change'],\n",
-       "      dtype='object')"
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df.columns"
    ]
   },
   {
@@ -10970,6 +10948,7 @@
     }
    ],
    "source": [
+    "# distributions\n",
     "columns = ['us_sales_millions', 'average_unit_sales_thousands',\n",
     "       'franchised_stores', 'company_stores', '2021_total_units',\n",
     "       'change_in_units_from_2020', 'share_of_sales', 'company_store_ratio',\n",
@@ -20785,57 +20764,9 @@
     }
    ],
    "source": [
+    "# distributions \n",
     "for column in columns:\n",
     "    px.box(df[column], title='Distribution of ' + str.upper(column).replace('_', ' '), labels={'value': str.upper(column).replace('_', ' ')}).show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 26,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Index(['name', 'us_sales_millions', 'average_unit_sales_thousands',\n",
-       "       'franchised_stores', 'company_stores', '2021_total_units',\n",
-       "       'change_in_units_from_2020', 'share_of_sales', 'company_store_ratio',\n",
-       "       'franchise_store_ratio', 'units_percent_change'],\n",
-       "      dtype='object')"
-      ]
-     },
-     "execution_count": 26,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df.columns"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 27,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "ValueError",
-     "evalue": "All arguments should have the same length. The length of argument `facet_col` is 3, whereas the length of  previously-processed arguments ['name', 'us_sales_millions', 'average_unit_sales_thousands', 'franchised_stores', 'company_stores', '2021_total_units', 'change_in_units_from_2020', 'share_of_sales', 'company_store_ratio', 'franchise_store_ratio', 'units_percent_change'] is 50",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[27], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m px\u001b[39m.\u001b[39;49mbox(df, facet_col\u001b[39m=\u001b[39;49m[\u001b[39m'\u001b[39;49m\u001b[39mfranchised_stores\u001b[39;49m\u001b[39m'\u001b[39;49m, \u001b[39m'\u001b[39;49m\u001b[39mcompany_stores\u001b[39;49m\u001b[39m'\u001b[39;49m, \u001b[39m'\u001b[39;49m\u001b[39m2021_total_units\u001b[39;49m\u001b[39m'\u001b[39;49m])\n",
-      "File \u001b[1;32mc:\\Users\\XIX\\anaconda3\\envs\\streamlit\\lib\\site-packages\\plotly\\express\\_chart_types.py:666\u001b[0m, in \u001b[0;36mbox\u001b[1;34m(data_frame, x, y, color, facet_row, facet_col, facet_col_wrap, facet_row_spacing, facet_col_spacing, hover_name, hover_data, custom_data, animation_frame, animation_group, category_orders, labels, color_discrete_sequence, color_discrete_map, orientation, boxmode, log_x, log_y, range_x, range_y, points, notched, title, template, width, height)\u001b[0m\n\u001b[0;32m    625\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mbox\u001b[39m(\n\u001b[0;32m    626\u001b[0m     data_frame\u001b[39m=\u001b[39m\u001b[39mNone\u001b[39;00m,\n\u001b[0;32m    627\u001b[0m     x\u001b[39m=\u001b[39m\u001b[39mNone\u001b[39;00m,\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m    655\u001b[0m     height\u001b[39m=\u001b[39m\u001b[39mNone\u001b[39;00m,\n\u001b[0;32m    656\u001b[0m ) \u001b[39m-\u001b[39m\u001b[39m>\u001b[39m go\u001b[39m.\u001b[39mFigure:\n\u001b[0;32m    657\u001b[0m     \u001b[39m\"\"\"\u001b[39;00m\n\u001b[0;32m    658\u001b[0m \u001b[39m    In a box plot, rows of `data_frame` are grouped together into a\u001b[39;00m\n\u001b[0;32m    659\u001b[0m \u001b[39m    box-and-whisker mark to visualize their distribution.\u001b[39;00m\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m    664\u001b[0m \u001b[39m    range (IQR: Q3-Q1), see \"points\" for other options.\u001b[39;00m\n\u001b[0;32m    665\u001b[0m \u001b[39m    \"\"\"\u001b[39;00m\n\u001b[1;32m--> 666\u001b[0m     \u001b[39mreturn\u001b[39;00m make_figure(\n\u001b[0;32m    667\u001b[0m         args\u001b[39m=\u001b[39;49m\u001b[39mlocals\u001b[39;49m(),\n\u001b[0;32m    668\u001b[0m         constructor\u001b[39m=\u001b[39;49mgo\u001b[39m.\u001b[39;49mBox,\n\u001b[0;32m    669\u001b[0m         trace_patch\u001b[39m=\u001b[39;49m\u001b[39mdict\u001b[39;49m(boxpoints\u001b[39m=\u001b[39;49mpoints, notched\u001b[39m=\u001b[39;49mnotched, x0\u001b[39m=\u001b[39;49m\u001b[39m\"\u001b[39;49m\u001b[39m \u001b[39;49m\u001b[39m\"\u001b[39;49m, y0\u001b[39m=\u001b[39;49m\u001b[39m\"\u001b[39;49m\u001b[39m \u001b[39;49m\u001b[39m\"\u001b[39;49m),\n\u001b[0;32m    670\u001b[0m         layout_patch\u001b[39m=\u001b[39;49m\u001b[39mdict\u001b[39;49m(boxmode\u001b[39m=\u001b[39;49mboxmode),\n\u001b[0;32m    671\u001b[0m     )\n",
-      "File \u001b[1;32mc:\\Users\\XIX\\anaconda3\\envs\\streamlit\\lib\\site-packages\\plotly\\express\\_core.py:1990\u001b[0m, in \u001b[0;36mmake_figure\u001b[1;34m(args, constructor, trace_patch, layout_patch)\u001b[0m\n\u001b[0;32m   1987\u001b[0m layout_patch \u001b[39m=\u001b[39m layout_patch \u001b[39mor\u001b[39;00m {}\n\u001b[0;32m   1988\u001b[0m apply_default_cascade(args)\n\u001b[1;32m-> 1990\u001b[0m args \u001b[39m=\u001b[39m build_dataframe(args, constructor)\n\u001b[0;32m   1991\u001b[0m \u001b[39mif\u001b[39;00m constructor \u001b[39min\u001b[39;00m [go\u001b[39m.\u001b[39mTreemap, go\u001b[39m.\u001b[39mSunburst, go\u001b[39m.\u001b[39mIcicle] \u001b[39mand\u001b[39;00m args[\u001b[39m\"\u001b[39m\u001b[39mpath\u001b[39m\u001b[39m\"\u001b[39m] \u001b[39mis\u001b[39;00m \u001b[39mnot\u001b[39;00m \u001b[39mNone\u001b[39;00m:\n\u001b[0;32m   1992\u001b[0m     args \u001b[39m=\u001b[39m process_dataframe_hierarchy(args)\n",
-      "File \u001b[1;32mc:\\Users\\XIX\\anaconda3\\envs\\streamlit\\lib\\site-packages\\plotly\\express\\_core.py:1405\u001b[0m, in \u001b[0;36mbuild_dataframe\u001b[1;34m(args, constructor)\u001b[0m\n\u001b[0;32m   1402\u001b[0m     args[\u001b[39m\"\u001b[39m\u001b[39mcolor\u001b[39m\u001b[39m\"\u001b[39m] \u001b[39m=\u001b[39m \u001b[39mNone\u001b[39;00m\n\u001b[0;32m   1403\u001b[0m \u001b[39m# now that things have been prepped, we do the systematic rewriting of `args`\u001b[39;00m\n\u001b[1;32m-> 1405\u001b[0m df_output, wide_id_vars \u001b[39m=\u001b[39m process_args_into_dataframe(\n\u001b[0;32m   1406\u001b[0m     args, wide_mode, var_name, value_name\n\u001b[0;32m   1407\u001b[0m )\n\u001b[0;32m   1409\u001b[0m \u001b[39m# now that `df_output` exists and `args` contains only references, we complete\u001b[39;00m\n\u001b[0;32m   1410\u001b[0m \u001b[39m# the special-case and wide-mode handling by further rewriting args and/or mutating\u001b[39;00m\n\u001b[0;32m   1411\u001b[0m \u001b[39m# df_output\u001b[39;00m\n\u001b[0;32m   1413\u001b[0m count_name \u001b[39m=\u001b[39m _escape_col_name(df_output, \u001b[39m\"\u001b[39m\u001b[39mcount\u001b[39m\u001b[39m\"\u001b[39m, [var_name, value_name])\n",
-      "File \u001b[1;32mc:\\Users\\XIX\\anaconda3\\envs\\streamlit\\lib\\site-packages\\plotly\\express\\_core.py:1245\u001b[0m, in \u001b[0;36mprocess_args_into_dataframe\u001b[1;34m(args, wide_mode, var_name, value_name)\u001b[0m\n\u001b[0;32m   1242\u001b[0m         col_name \u001b[39m=\u001b[39m _check_name_not_reserved(field, reserved_names)\n\u001b[0;32m   1244\u001b[0m     \u001b[39mif\u001b[39;00m length \u001b[39mand\u001b[39;00m \u001b[39mlen\u001b[39m(argument) \u001b[39m!=\u001b[39m length:\n\u001b[1;32m-> 1245\u001b[0m         \u001b[39mraise\u001b[39;00m \u001b[39mValueError\u001b[39;00m(\n\u001b[0;32m   1246\u001b[0m             \u001b[39m\"\u001b[39m\u001b[39mAll arguments should have the same length. \u001b[39m\u001b[39m\"\u001b[39m\n\u001b[0;32m   1247\u001b[0m             \u001b[39m\"\u001b[39m\u001b[39mThe length of argument `\u001b[39m\u001b[39m%s\u001b[39;00m\u001b[39m` is \u001b[39m\u001b[39m%d\u001b[39;00m\u001b[39m, whereas the \u001b[39m\u001b[39m\"\u001b[39m\n\u001b[0;32m   1248\u001b[0m             \u001b[39m\"\u001b[39m\u001b[39mlength of  previously-processed arguments \u001b[39m\u001b[39m%s\u001b[39;00m\u001b[39m is \u001b[39m\u001b[39m%d\u001b[39;00m\u001b[39m\"\u001b[39m\n\u001b[0;32m   1249\u001b[0m             \u001b[39m%\u001b[39m (field, \u001b[39mlen\u001b[39m(argument), \u001b[39mstr\u001b[39m(\u001b[39mlist\u001b[39m(df_output\u001b[39m.\u001b[39mcolumns)), length)\n\u001b[0;32m   1250\u001b[0m         )\n\u001b[0;32m   1251\u001b[0m     df_output[\u001b[39mstr\u001b[39m(col_name)] \u001b[39m=\u001b[39m to_unindexed_series(argument)\n\u001b[0;32m   1253\u001b[0m \u001b[39m# Finally, update argument with column name now that column exists\u001b[39;00m\n",
-      "\u001b[1;31mValueError\u001b[0m: All arguments should have the same length. The length of argument `facet_col` is 3, whereas the length of  previously-processed arguments ['name', 'us_sales_millions', 'average_unit_sales_thousands', 'franchised_stores', 'company_stores', '2021_total_units', 'change_in_units_from_2020', 'share_of_sales', 'company_store_ratio', 'franchise_store_ratio', 'units_percent_change'] is 50"
-     ]
-    }
-   ],
-   "source": [
-    "px.box(df, facet_col=['franchised_stores', 'company_stores', '2021_total_units'])"
    ]
   },
   {
@@ -21038,12 +20969,13 @@
     }
    ],
    "source": [
+    "# summary statistics\n",
     "df.describe()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -21180,11 +21112,16 @@
        "layout": {
         "annotations": [
          {
+          "font": {
+           "color": "black",
+           "size": 12
+          },
           "showarrow": false,
-          "text": "Average Sales",
-          "x": 49.5,
-          "xshift": 5,
-          "y": "us_sales_millions"
+          "text": "Average",
+          "x": 49,
+          "xanchor": "left",
+          "y": 4965,
+          "yanchor": "bottom"
          }
         ],
         "barmode": "relative",
@@ -22050,10 +21987,11 @@
     }
    ],
    "source": [
+    "# adding average trace\n",
     "fig = px.bar(df, x='name', y='us_sales_millions')\n",
     "fig.add_shape(type='line', x0=-0.5, x1=len(df) - 0.5, y0=4965, y1=4965, line=dict(dash='dash'))\n",
-    "fig.add_annotation(x=len(df)-0.5, y='us_sales_millions', text='Average Sales', name='Average Sales',\n",
-    "                   showarrow=False, xshift=3)\n",
+    "\n",
+    "fig.add_annotation(x=len(df)-1, y=4965, text='Average', showarrow=False, xanchor='left', yanchor='bottom', font=dict(size=12, color='black'))\n",
     "\n",
     "# Show the chart\n",
     "fig.show()\n"
@@ -31688,6 +31626,7 @@
     }
    ],
    "source": [
+    "# top unit sales 10-50\n",
     "for number in [10, 25, 50]:\n",
     "    px.bar(df.sort_values(by='average_unit_sales_thousands', ascending=False).head(number), x='name', y='average_unit_sales_thousands', title='Top ' +str(number)+ ' Unit Sales', labels={'average_unit_sales_thousands': 'Unit Sales (thousands)'}, height=700, color='name').show()"
    ]
@@ -32807,31 +32746,8 @@
     }
    ],
    "source": [
+    "# total number of stores\n",
     "px.bar(df, x='name', y=['franchised_stores', 'company_stores'], title='Total Number of Stores',labels={'value': 'Number of Stores'}, height=700)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Index(['name', 'us_sales_millions', 'average_unit_sales_thousands',\n",
-       "       'franchised_stores', 'company_stores', '2021_total_units',\n",
-       "       'change_in_units_from_2020', 'share_of_sales', 'company_store_ratio',\n",
-       "       'franchise_store_ratio', 'units_percent_change'],\n",
-       "      dtype='object')"
-      ]
-     },
-     "execution_count": 22,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df.columns"
    ]
   },
   {
@@ -33966,6 +33882,7 @@
     }
    ],
    "source": [
+    "# top 10 number of stores\n",
     "px.bar(df.sort_values(by='2021_total_units', ascending=False).head(10), x='name', y='2021_total_units', title='Top 10 Total Number of Stores', labels={'total_stores': 'Number of Stores'}, height=700, color='name')"
    ]
   },
@@ -38784,6 +38701,7 @@
     }
    ],
    "source": [
+    "# total units 10-50\n",
     "for number in [10, 25, 50]:\n",
     "    px.bar(df.sort_values(by='2021_total_units', ascending=False).head(number), x='name', y='2021_total_units', title='Top ' +str(number)+ ' ,2021 Total Units', color='name', height=700).show()"
    ]
@@ -40772,6 +40690,7 @@
     }
    ],
    "source": [
+    "# unit percent change\n",
     "px.bar(df, x='name', y='units_percent_change', height=700, title='Unit Percent Change', labels={'units_percent_change': '% Change'})"
    ]
   },
@@ -45125,32 +45044,8 @@
     }
    ],
    "source": [
-    "# franchises vs company sotres\n",
+    "# franchises vs company stores\n",
     "px.bar(df, x='name', y='franchise_store_ratio', height=700, title='Franchise/Company Store Ratio', labels={'franchise_store_ratio': 'Franchise/Company Ratio'}, color='name')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Index(['name', 'us_sales_millions', 'average_unit_sales_thousands',\n",
-       "       'franchised_stores', 'company_stores', '2021_total_units',\n",
-       "       'change_in_units_from_2020', 'share_of_sales', 'company_store_ratio',\n",
-       "       'units_percent_change', 'total_stores', 'franchise_store_ratio'],\n",
-       "      dtype='object')"
-      ]
-     },
-     "execution_count": 183,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df.columns"
    ]
   },
   {
@@ -46120,6 +46015,7 @@
     }
    ],
    "source": [
+    "# market share\n",
     "px.pie(df, names='name', values='share_of_sales', height=700, title='Market Share')"
    ]
   },
@@ -47010,15 +46906,28 @@
     }
    ],
    "source": [
+    "# market share \n",
     "px.pie(df.sort_values(by='share_of_sales', ascending=False).head(10), names='name', values='share_of_sales', height=700, title='Market Share Amongst Top 10')"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## Conclusions"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We see that McDonald's is by far the best selling fast food chain, followed by Starbucks and Chick-Fil-A. McDonald's makes up 15.8% of the total market share of these 50 fast food chains, while the second highest, Starbucks, makes up 9.8%. The features that are highly correlated with sales are 2021 total units, and the number of franchised stores.\n",
+    "\n",
+    "When it comes to unit sales, Chick-Fil-A makes the most, followed by Raising Cane's and Krispy Kreme. Subway has the most amount of units, and then we have Starbucks and McDonald's. Despite having the most units in 2020, Subway had the highest loss of units in 2021, while other chains had slight losses or a few hundred additions.\n",
+    "\n",
+    "We then compared the ratio of franchises to company owned units. Chains such as Raising Cane's and Panda Express had the highest ration of company owned units, while Dairy Queen and Tropical Smoothie Cafe had the highest ratio of franchises."
+   ]
   }
  ],
  "metadata": {
